generer quiz+ debut de l'annimation de quiz